
  * The `Setting` class is now private.  The only supported method to
    add settings to a `Device` is via its `add_setting` method.

* New devices supported:

  * Coherent Obis laser
  * Lumencor Spectra III light engine
  * Prior ProScan III controller
  * Prior filter wheels
  * Toptica iBeam laser
  * Coherent Obis laser
  * Zaber filter wheels
  * Zaber filter cube turrets

* Changes to device ABCs:

  * Device:

    * The `Device._logger` attribute has been removed.  It is
      recommended to use a logger for the module.

  * DeformableMirror:

    * Concrete classes must implement the `n_actuators` public
      property instead of the private _n_actuators`.

* Device specific changes:

  * Ximea Camera:

    * Support for the ximea cameras was completely rewritten to
      support hardware triggers, as well as fix multiple minor issues.

* The device server and clients no longer force pickle protocol
  version 2.  If the client and server are running different Python
  versions it may be necessary to specify a version number.  This
  should be done on the side with the highest support version number
  by setting `Pyro4.config.PICKLE_PROTOCOL_VERSION`.


Version 0.3.0 (2019/11/07)
--------------------------

* Selected most important, backwards incompatible, changes:

  * `microscope.device`, function used to create a device definition,
    changed signature.  The arguments to the device constructor must
    now be passed as a dictionary.

  * Python 2 is no longer supported.

  * New requirements:

    * Python >= 3.5
    * hidapi

* New devices supported:

  * Andor (EM)CCD cameras (requires Andor's atmcd C library)
  * Aurox Clarity (requires hidapi Python package)
  * Imagine Optic Mirao 52-e deformable mirror (requires mirao52e C library)
  * Linkam Correlative Microscopy Stage (requires LinkamSDK C library)
  * Ximea cameras (requires Ximea's xiAPI Python package)

* Changes to device ABCs:

  * New ABC `ControllerDevice` for controller devices.
